--- a/notebooks/train_model.ipynb
+++ b/notebooks/train_model.ipynb
@@ -28,10 +28,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5f6cf087-4250-4e5b-99ab-8e08de86453f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+------------+-------------------+------+--------+--------+-----------+---------+-----+----------+---+------------------+\n",
+      "|           location|     country|               time|temp_c|wind_kph|humidity|pressure_mb|precip_mm|cloud|visibility| uv|         condition|\n",
+      "+-------------------+------------+-------------------+------+--------+--------+-----------+---------+-----+----------+---+------------------+\n",
+      "|Modjadje's Location|South Africa|2025-04-11 11:25:00|  20.8|     5.8|    73.0|     1020.0|     0.06| 70.0|      10.0|6.8|Patchy rain nearby|\n",
+      "|Modjadje's Location|South Africa|2025-04-11 11:25:00|  20.8|     5.8|    73.0|     1020.0|     0.06| 70.0|      10.0|6.8|Patchy rain nearby|\n",
+      "|Modjadje's Location|South Africa|2025-04-11 11:25:00|  20.8|     5.8|    73.0|     1020.0|     0.06| 70.0|      10.0|6.8|Patchy rain nearby|\n",
+      "|Modjadje's Location|South Africa|2025-04-11 11:25:00|  20.8|     5.8|    73.0|     1020.0|     0.06| 70.0|      10.0|6.8|Patchy rain nearby|\n",
+      "|Modjadje's Location|South Africa|2025-04-11 11:25:00|  20.8|     5.8|    73.0|     1020.0|     0.06| 70.0|      10.0|6.8|Patchy rain nearby|\n",
+      "+-------------------+------------+-------------------+------+--------+--------+-----------+---------+-----+----------+---+------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df = spark.read.csv(\"hdfs://namenode:9000/tmp/weather_data\", header=True, inferSchema=True)\n",
     "df.show(5)\n"
@@ -41,6 +59,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f73a0116-15f8-41bc-884b-5dea871dfeaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3d3b7fb-a60c-48bd-b7e6-1b1bc5293048",
    "metadata": {},
    "outputs": [],
    "source": []
