--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -10,17 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pyspark==3.5.0 in c:\\users\\admin\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (3.5.0)\n",
-      "Requirement already satisfied: py4j==0.10.9.7 in c:\\users\\admin\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pyspark==3.5.0) (0.10.9.7)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.3.1 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pyspark==3.5.0 in c:\\users\\namkh\\appdata\\roaming\\python\\python312\\site-packages (3.5.0)\n",
+      "Requirement already satisfied: py4j==0.10.9.7 in c:\\users\\namkh\\appdata\\roaming\\python\\python312\\site-packages (from pyspark==3.5.0) (0.10.9.7)\n"
      ]
     }
    ],
@@ -65,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
