--- a/notebooks/train_model.ipynb
+++ b/notebooks/train_model.ipynb
@@ -28,45 +28,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5f6cf087-4250-4e5b-99ab-8e08de86453f",
+   "execution_count": 6,
+   "id": "e1706e74-0db2-41bb-a0a9-ebac1ce2e65a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------+------------+-------------------+------+--------+--------+-----------+---------+-----+----------+---+------------------+\n",
-      "|           location|     country|               time|temp_c|wind_kph|humidity|pressure_mb|precip_mm|cloud|visibility| uv|         condition|\n",
-      "+-------------------+------------+-------------------+------+--------+--------+-----------+---------+-----+----------+---+------------------+\n",
-      "|Modjadje's Location|South Africa|2025-04-11 11:25:00|  20.8|     5.8|    73.0|     1020.0|     0.06| 70.0|      10.0|6.8|Patchy rain nearby|\n",
-      "|Modjadje's Location|South Africa|2025-04-11 11:25:00|  20.8|     5.8|    73.0|     1020.0|     0.06| 70.0|      10.0|6.8|Patchy rain nearby|\n",
-      "|Modjadje's Location|South Africa|2025-04-11 11:25:00|  20.8|     5.8|    73.0|     1020.0|     0.06| 70.0|      10.0|6.8|Patchy rain nearby|\n",
-      "|Modjadje's Location|South Africa|2025-04-11 11:25:00|  20.8|     5.8|    73.0|     1020.0|     0.06| 70.0|      10.0|6.8|Patchy rain nearby|\n",
-      "|Modjadje's Location|South Africa|2025-04-11 11:25:00|  20.8|     5.8|    73.0|     1020.0|     0.06| 70.0|      10.0|6.8|Patchy rain nearby|\n",
-      "+-------------------+------------+-------------------+------+--------+--------+-----------+---------+-----+----------+---+------------------+\n",
+      "+----------+-----+-------------+-------+-------+-----+--------+----+----+\n",
+      "|      Date| Time|      Weather|   Temp|   Rain|Cloud|Pressure|Wind|Gust|\n",
+      "+----------+-----+-------------+-------+-------+-----+--------+----+----+\n",
+      "|2010-01-01|00:00|        Clear|  25 °c|    0.0| NULL|    NULL|NULL|NULL|\n",
+      "|       mm\"|  21%|      1010 mb|15 km/h|27 km/h| NULL|    NULL|NULL|NULL|\n",
+      "|2010-01-01|03:00|        Clear|  25 °c|    0.0| NULL|    NULL|NULL|NULL|\n",
+      "|       mm\"|  22%|      1009 mb|16 km/h|29 km/h| NULL|    NULL|NULL|NULL|\n",
+      "|2010-01-01|06:00|Partly cloudy|  25 °c|    0.0| NULL|    NULL|NULL|NULL|\n",
+      "+----------+-----+-------------+-------+-------+-----+--------+----+----+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df = spark.read.csv(\"hdfs://namenode:9000/tmp/weather_data\", header=True, inferSchema=True)\n",
-    "df.show(5)\n"
+    "df = spark.read.csv(\"hdfs://namenode:9000/tmp/weather_data/bac-lieu.csv\", header=True, inferSchema=True)\n",
+    "df.show(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f73a0116-15f8-41bc-884b-5dea871dfeaf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3d3b7fb-a60c-48bd-b7e6-1b1bc5293048",
+   "id": "6e0e96a5-e7d1-4f91-a344-c6a2e975e7dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -88,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
