--- a/data_weather/crawl_weather.ipynb
+++ b/data_weather/crawl_weather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "28c31862-3fa5-43ca-be84-77a438ab43b3",
    "metadata": {},
    "outputs": [
@@ -10,51 +10,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Đang crawl dữ liệu từ ha-noi\n",
-      "Đang crawl dữ liệu từ ho-chi-minh\n",
-      "Đang crawl dữ liệu từ da-nang\n"
+      "Đang crawl dữ liệu từ lang-son\n",
+      "Đang crawl dữ liệu từ my-tho\n",
+      "Đang crawl dữ liệu từ hong-gai\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🌤️ Crawling weather data:  33%|███▎      | 1/3 [00:42<01:25, 42.63s/it]"
+      "🌤️ Crawling weather data:  33%|███▎      | 1/3 [3:19:42<6:39:25, 11982.58s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Đã lưu dữ liệu ha-noi vào D:\\hust_materials\\DE\\weather\\Big_data_project\\data_weather\\ha-noi.csv\n"
+      "✅ Đã lưu dữ liệu hong-gai vào C:\\Users\\Admin\\Big_data_project\\data_weather\\hong-gai.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🌤️ Crawling weather data:  67%|██████▋   | 2/3 [00:44<00:18, 18.82s/it]"
+      "🌤️ Crawling weather data:  67%|██████▋   | 2/3 [3:19:54<1:22:21, 4941.06s/it] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Đã lưu dữ liệu ho-chi-minh vào D:\\hust_materials\\DE\\weather\\Big_data_project\\data_weather\\ho-chi-minh.csv\n"
+      "✅ Đã lưu dữ liệu lang-son vào C:\\Users\\Admin\\Big_data_project\\data_weather\\lang-son.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🌤️ Crawling weather data: 100%|██████████| 3/3 [00:47<00:00, 15.71s/it]"
+      "🌤️ Crawling weather data: 100%|██████████| 3/3 [3:20:46<00:00, 4015.43s/it]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Đã lưu dữ liệu da-nang vào D:\\hust_materials\\DE\\weather\\Big_data_project\\data_weather\\da-nang.csv\n",
+      "✅ Đã lưu dữ liệu my-tho vào C:\\Users\\Admin\\Big_data_project\\data_weather\\my-tho.csv\n",
       "\n",
       "✅ Đã crawl thành công: 3/3\n"
      ]
@@ -104,8 +104,8 @@
     "        pass\n",
     "    \n",
     "    record_keys = ['Time', 'Weather', 'Temp', 'Rain', 'Cloud', 'Pressure', 'Wind', 'Gust']\n",
-    "    date = datetime.datetime(2025, 4, 2)\n",
-    "    end_date = datetime.datetime(2025, 4, 5)\n",
+    "    date = datetime.datetime(2009, 1, 1)\n",
+    "    end_date = datetime.datetime(2025, 4, 18)\n",
     "    \n",
     "    try:\n",
     "        while date < end_date:\n",
@@ -165,10 +165,10 @@
     "        return f\"❌ Lỗi khi crawl {name}: {e}\", name, False\n",
     "\n",
     "def main():\n",
-    "    output_dir = r\"D:\\hust_materials\\DE\\weather\\Big_data_project\\data_weather\"\n",
+    "    output_dir = r\"C:\\Users\\Admin\\Big_data_project\\data_weather\"\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "    \n",
-    "    name_tinh_process = [\"ha-noi\", \"ho-chi-minh-city\", \"da-nang\"]  # Thay bằng danh sách của bạn\n",
+    "    name_tinh_process = [\"lang-son\", \"my-tho\", \"hong-gai\"]  # Thay bằng danh sách của bạn\n",
     "    \n",
     "    # Số luồng chạy đồng thời (tùy chỉnh theo cấu hình máy)\n",
     "    max_workers = 3  # Nên để số lượng nhỏ để tránh bị chặn\n",
@@ -217,7 +217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
