--- a/data_weather/crawl_weather.ipynb
+++ b/data_weather/crawl_weather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "28c31862-3fa5-43ca-be84-77a438ab43b3",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
     "            time.sleep(1)\n",
     "            \n",
     "            tables = driver.find_element(By.XPATH, \"/html/body/form/div[3]/section/div/div/div/div[3]/div[1]/div/div[3]/table/tbody\")\n",
-    "    # lấy lại phần tử sau khi trang đã reload\n",
+    "    \n",
     "            all_rows = tables.find_elements(By.TAG_NAME, \"tr\")\n",
     "            rows = all_rows[2:10] \n",
     "            \n",
@@ -162,16 +162,16 @@
     "        df.to_csv(filename, index=False)\n",
     "        return f\"✅ Đã lưu dữ liệu {name} vào {filename}\", name, True\n",
     "    except Exception as e:\n",
-    "        return f\"❌ Lỗi khi crawl {name}: {e}\", name, False\n",
+    "        return f\" Lỗi khi crawl {name}: {e}\", name, False\n",
     "\n",
     "def main():\n",
     "    output_dir = r\"D:\\hust_materials\\DE\\weather\\Big_data_project\\data_weather\"\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "    \n",
-    "    name_tinh_process = [\"ha-noi\", \"ho-chi-minh-city\", \"da-nang\"]  # Thay bằng danh sách của bạn\n",
+    "    name_tinh_process = [\"ha-noi\", \"ho-chi-minh-city\", \"da-nang\"] \n",
     "    \n",
-    "    # Số luồng chạy đồng thời (tùy chỉnh theo cấu hình máy)\n",
-    "    max_workers = 3  # Nên để số lượng nhỏ để tránh bị chặn\n",
+    "   \n",
+    "    max_workers = 3  \n",
     "    \n",
     "    results = []\n",
     "    with concurrent.futures.ThreadPoolExecutor(max_workers=max_workers) as executor:\n",
@@ -182,7 +182,7 @@
     "        }\n",
     "        \n",
     "        # Hiển thị tiến trình\n",
-    "        with tqdm(total=len(name_tinh_process), desc=\"🌤️ Crawling weather data\") as pbar:\n",
+    "        with tqdm(total=len(name_tinh_process), desc=\" Crawling weather data\") as pbar:\n",
     "            for future in concurrent.futures.as_completed(future_to_name):\n",
     "                name = future_to_name[future]\n",
     "                try:\n",
@@ -190,17 +190,12 @@
     "                    print(message)\n",
     "                    results.append((location, success))\n",
     "                except Exception as e:\n",
-    "                    print(f\"❌ Lỗi với {name}: {e}\")\n",
+    "                    print(f\" Lỗi với {name}: {e}\")\n",
     "                    results.append((name, False))\n",
     "                pbar.update(1)\n",
     "    \n",
-    "    # Thống kê kết quả\n",
-    "    success_count = sum(1 for _, success in results if success)\n",
-    "    print(f\"\\n✅ Đã crawl thành công: {success_count}/{len(name_tinh_process)}\")\n",
+    "   \n",
     "    \n",
-    "    if success_count < len(name_tinh_process):\n",
-    "        failed_locations = [name for name, success in results if not success]\n",
-    "        print(f\"❌ Các địa điểm chưa crawl được: {', '.join(failed_locations)}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
