Update Kafka stream data and ML notebooks

--- a/notebooks/RandomForest_model.ipynb
+++ b/notebooks/RandomForest_model.ipynb
@@ -20,21 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e257d2b3-6a55-4559-804d-c028490ecbf2",
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
     "    .appName(\"Read HDFS Weather Data\") \\\n",
-    "    .master(\"spark://spark-master:7077\") \\\n",
+    "    .master(\"local\") \\\n",
     "    .config(\"spark.hadoop.fs.defaultFS\", \"hdfs://namenode:9000\") \\\n",
-    "    .getOrCreate()"
+    "    .getOrCreate()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "7fbf60f5-a958-4906-a9ae-157b8e484d80",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
     "    df['Weather'] = np.select(conditions, choices, default=0)\n",
     "\n",
     "    #Lấy thông tin 6 mốc gần nhất để thêm dữ kiện\n",
-    "    lag_steps = 6\n",
+    "    lag_steps = 3\n",
     "    for lag in range(1, lag_steps + 1):\n",
     "        df[f'Temp_t-{lag}'] = df['Temp(°c)'].shift(lag)\n",
     "        df[f'Rain_t-{lag}'] = df['Rain(nmm)'].shift(lag)\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "b592d423-bd42-4668-9973-a68d4621e0b7",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "30628db6-aad1-43b1-aae8-fb449d807f39",
    "metadata": {},
    "outputs": [],
@@ -206,12 +206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ae36ec23-43d7-4c41-ba0b-8a4866a861af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy = 0.9803232998885173\n",
+      "Model for vinh has been built and evaluated with accuracy :0.9803232998885173\n"
+     ]
+    }
+   ],
    "source": [
-    "list_provinces = ['vinh','dong-hoi']\n",
+    "list_provinces = ['vinh','ha-noi']\n",
     "\n",
     "rfmodel, accuracy = build_randomforest_model(list_provinces)\n",
     "print(f\"Model for vinh has been built and evaluated with accuracy :{accuracy}\")\n",
