--- a/notebooks/LR_model.ipynb
+++ b/notebooks/LR_model.ipynb
@@ -19,21 +19,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "92304901-50e6-4ec5-b57b-e6bdbc39a9a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
     "    .appName(\"Read HDFS Weather Data\") \\\n",
-    "    .master(\"spark://spark-master:7077\") \\\n",
+    "    .master(\"local\") \\\n",
     "    .config(\"spark.hadoop.fs.defaultFS\", \"hdfs://namenode:9000\") \\\n",
-    "    .getOrCreate()"
+    "    .getOrCreate()\n",
+    "# spark://spark-master:7077"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "37483270",
    "metadata": {},
    "outputs": [],
@@ -90,7 +91,7 @@
     "    df['Weather'] = np.select(conditions, choices, default=0)\n",
     "\n",
     "    #Lấy thông tin 6 mốc gần nhất để thêm dữ kiện\n",
-    "    lag_steps = 6\n",
+    "    lag_steps = 3\n",
     "    for lag in range(1, lag_steps + 1):\n",
     "        df[f'Temp_t-{lag}'] = df['Temp(°c)'].shift(lag)\n",
     "        df[f'Rain_t-{lag}'] = df['Rain(nmm)'].shift(lag)\n",
@@ -113,18 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "81e40e5b",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Xây dựng pipeline và mô hình Logistic Regression\n",
-    "def build_lr_model(provinces):\n",
+    "def build_lr_model(location):\n",
     "    df_pd = pd.DataFrame()\n",
-    "    for location in provinces:\n",
-    "        df_cur = data_preprocess(location)\n",
-    "        df_pd = pd.concat([df_pd, df_cur], ignore_index= True)\n",
-    "    \n",
+    "    # for location in provinces:\n",
+    "    #     df_cur = data_preprocess(location)\n",
+    "    #     df_pd = pd.concat([df_pd, df_cur], ignore_index= True)\n",
+    "    df_cur= data_preprocess(location)\n",
+    "    df_pd = pd.concat([df_pd, df_cur], ignore_index= True)\n",
     "    # Chuyển Pandas sang DataFrame Spark\n",
     "    df_loc = spark.createDataFrame(df_pd)\n",
     "\n",
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e11259f8",
    "metadata": {},
    "outputs": [],
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1654ccfe",
    "metadata": {},
    "outputs": [
@@ -207,15 +209,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Accuracy = 0.7411293507079596\n",
-      "Finished training for central provinces. Accuracy: 0.7411293507079596\n"
+      "Logistic Regression Accuracy = 0.76811918897726\n",
+      "Finished training for central provinces. Accuracy: 0.76811918897726\n"
      ]
     }
    ],
    "source": [
-    "list_provinces = ['vinh','dong-hoi']\n",
     "\n",
-    "lr_model, lr_acc = build_lr_model(list_provinces)\n",
+    "lr_model, lr_acc = build_lr_model('vinh')\n",
     "print(\"Finished training for central provinces. Accuracy:\", lr_acc)"
    ]
   },
